src/objects/Properties__c.object
<CustomObject>
    <description>Holds information about a specific property used for temporary housing requests.</description>
    <fields>
        <fullName>Account_Notes__c</fullName>
        <formula>Landlord__r.Account.Account_Notes__c</formula>
        <label>Account Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Property_Amenities__c</fullName>
        <label>Additional Property Amenities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Administration_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Administration Fee charged by the landldord.</description>
        <label>Administration Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Application Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bathrooms__c</fullName>
        <label># Bathrooms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>7.5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>8.5</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <label># Bedrooms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Break_Lease_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Break Lease Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Broker Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleaning_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>A cleaning fee charged by the landlord.</description>
        <label>Cleaning Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damages_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fee charged by the landlord for damages to the property.</description>
        <label>Damages Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_Notice_Required__c</fullName>
        <inlineHelpText># of days notice of move-out required by the landlord</inlineHelpText>
        <label>Days Notice Required</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Increment_Extension__c</fullName>
        <description>The number of days allowed to increment an extension.</description>
        <label>Days to Increment Extension</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Delivery Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Distance_From_Damaged_Property__c</fullName>
        <label>Distance From Damaged Property</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dozer_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dozer Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Electric_A_C_Hookup_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Electric-A/C Hookup Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Payment_Type__c</fullName>
        <label>Initial Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Check</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cashiers Check</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>ACH Payment</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Month_to_Month_Lease_Same_Rent__c</fullName>
        <label>Is Month-to-Month Lease Same Rent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landlord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Landlord</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Landlord</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landscape__c</fullName>
        <label>Landscape Service Included</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Day_of_Current_Month__c</fullName>
        <formula>DATE(

YEAR(TODAY()),

MONTH(TODAY()), 

CASE( MONTH(TODAY()),
1, 31,
2, IF( MOD( YEAR(TODAY()), 4) = 0, 29, 28),
3, 31,
4, 30,
5, 31,
6, 30,
7, 31,
8, 31,
9, 30,
10, 31,
11, 30,
12, 31,
0
)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day of Current Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Charge_Details__c</fullName>
        <label>Late Charge Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Late_Charges_Begin__c</fullName>
        <label>Late Charges Begin</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_End__c</fullName>
        <label>Lease End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Start__c</fullName>
        <label>Lease Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Length_of_Lease_Formula__c</fullName>
        <formula>IF(Lease_End__c - Lease_Start__c &lt;= 59,1, 
IF(AND (Lease_End__c - Lease_Start__c &gt;= 60, Lease_End__c - Lease_Start__c &lt;= 89),2, 
IF(AND (Lease_End__c - Lease_Start__c &gt;=90, Lease_End__c - Lease_Start__c &lt;= 119),3, 
IF(AND (Lease_End__c - Lease_Start__c &gt;=120, Lease_End__c - Lease_Start__c &lt;= 149),4, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=150, Lease_End__c - Lease_Start__c &lt;= 179),5, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=180, Lease_End__c - Lease_Start__c &lt;= 209),6, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=210, Lease_End__c - Lease_Start__c &lt;= 239),7, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=240, Lease_End__c - Lease_Start__c &lt;= 269),8, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=270, Lease_End__c - Lease_Start__c &lt;= 299),9, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=300, Lease_End__c - Lease_Start__c &lt;= 330),10, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=331, Lease_End__c - Lease_Start__c &lt;= 361),11, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=362, Lease_End__c - Lease_Start__c &lt;= 392),12, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=393, Lease_End__c - Lease_Start__c &lt;= 423),13, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=424, Lease_End__c - Lease_Start__c &lt;= 454),14, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=455, Lease_End__c - Lease_Start__c &lt;= 485),15, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=486, Lease_End__c - Lease_Start__c &lt;= 516),16, 
IF(AND(Lease_End__c - Lease_Start__c &gt;=517, Lease_End__c - Lease_Start__c &lt;= 547),17, 
IF(Lease_End__c - Lease_Start__c &gt;=548,18,0))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of Lease Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_Lease__c</fullName>
        <inlineHelpText>Number of Months</inlineHelpText>
        <label>Length of Lease</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_PTID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_PTID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_VendorID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_VendorID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_to_Month_Rate__c</fullName>
        <label>Month-to-Month Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Seasonal_Rate__c</fullName>
        <inlineHelpText>The amount the rent is increasing.</inlineHelpText>
        <label>New Seasonal Rate</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Refundable_Fee__c</fullName>
        <label>Non-Refundable Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Parking_Spaces__c</fullName>
        <label>Number of Parking Spaces</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupied_From_Date__c</fullName>
        <label>Occupied From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occupied_To__c</fullName>
        <label>Occupied To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parking_Type__c</fullName>
        <label>Parking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Garage</fullName>
                </value>
                <value>
                    <fullName>Carport</fullName>
                </value>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Deposit_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the contact that should be paid the security deposit,if it is not the landlord.</inlineHelpText>
        <label>Pay Deposit To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Pay Deposit To)</relationshipLabel>
        <relationshipName>Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Deposit_to_Landlord__c</fullName>
        <label>Pay Deposit to Landlord</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Fee_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the landlord contact to receive the fees on the initial payment authorization.</inlineHelpText>
        <label>Pay Fee To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Pay Fee To)</relationshipLabel>
        <relationshipName>Properties4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Fee_to_Landlord__c</fullName>
        <inlineHelpText>Select false if the recurring landlord will not receive the fees on the initial payment authorization.</inlineHelpText>
        <label>Pay Fee to Landlord</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Fees_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the contact to pay the fees to, if it is not the landlord.</inlineHelpText>
        <label>Pay Broker Fee To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Pay Fees To)</relationshipLabel>
        <relationshipName>Properties3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Fees_to_Landlord__c</fullName>
        <label>Pay Broker Fee to Landlord</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Rent_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the contact to pay the initial rent amount to, if it is not the landlord.</inlineHelpText>
        <label>Pay Rent To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Properties (Pay Rent To)</relationshipLabel>
        <relationshipName>Properties2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pay_Rent_to_Landlord__c</fullName>
        <label>Pay Rent to Landlord</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pet_Deposit__c</fullName>
        <label>Pet Deposit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pet_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Pet fee charged by the landlord.</description>
        <label>Pet Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pets_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pets Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pool_Maintenance_Included__c</fullName>
        <label>Pool Maintenance Included</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pro_Rate_Variance__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Enter the amount above the calculated prorate for the landlord&apos;s initial payment authorization.</description>
        <inlineHelpText>Additional prorate that landlord requires.</inlineHelpText>
        <label>ProRate Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Availability_End_Date__c</fullName>
        <description>The date the property is no longer available for rent.</description>
        <inlineHelpText>The date the property is no longer available for rent.</inlineHelpText>
        <label>Property Availability End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prorate_Amount__c</fullName>
        <label>Prorate Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Re_Keying_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fee to re-key the property.</description>
        <label>Re-Keying Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Redecorating_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fee to redecorate the property.</description>
        <label>Redecorating Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent_Comments__c</fullName>
        <inlineHelpText>These comments appear on the THC</inlineHelpText>
        <label>Rent Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rent_Due__c</fullName>
        <description>The day the rent is due each month.</description>
        <inlineHelpText>The day the rent is due each month.</inlineHelpText>
        <label>Rent Due</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rent_Frequency__c</fullName>
        <label>Rent Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_Premium__c</fullName>
        <label>Rent Premium</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rent__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total monthly or daily rent amount that should be paid to the landlord.</inlineHelpText>
        <label>Rent</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Searches__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Searches</label>
        <referenceTo>Searches__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Season_Rate_End__c</fullName>
        <label>Season Rate End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seasonal_Rate_Start__c</fullName>
        <label>Seasonal Rate Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Deposit__c</fullName>
        <label>Security Deposit</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Send_Via__c</fullName>
        <description>The way the initial check should be sen to the landlord.</description>
        <inlineHelpText>How the initial check should be sent to the landlord.</inlineHelpText>
        <label>Send Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Mail</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>FedEx Morning</fullName>
                </value>
                <value>
                    <fullName>FedEx Standard</fullName>
                </value>
                <value>
                    <fullName>FedEx Saturday</fullName>
                </value>
                <value>
                    <fullName>FedEx 2-Day</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Septic_Holding_Tank_Pump_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Septic Holding Tank/Pump Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Set_Up_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Set-Up Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Signature_Required__c</fullName>
        <description>Does the initial check require a signature on delivery</description>
        <inlineHelpText>Does the initial check require a signature on delivery</inlineHelpText>
        <label>Signature Required</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Send_Via__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Inspection_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Site Inspection Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skirting_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Skirting Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Snow_Removal_Included__c</fullName>
        <label>Snow Removal Included</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sq_Foot__c</fullName>
        <description>The square footage of the temporary residence.</description>
        <label>Square Feet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_ID__c</fullName>
        <label>State ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Researching</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Occupied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_Utility_Pole_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Temp Utility Pole Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Refundable_Deposit_Formula__c</fullName>
        <description>Total of the Security Deposit and Pet Deposit fields.</description>
        <formula>Security_Deposit__c  +  Pet_Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total of the Security Deposit and Pet Deposit fields.</inlineHelpText>
        <label>Total Refundable Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Property__c</fullName>
        <label>Type of Property</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>House</fullName>
                </value>
                <value>
                    <fullName>Condo</fullName>
                </value>
                <value>
                    <fullName>Corporate Furnished</fullName>
                </value>
                <value>
                    <fullName>Townhouse</fullName>
                </value>
                <value>
                    <fullName>Apartment</fullName>
                </value>
                <value>
                    <fullName>Mobile Home</fullName>
                </value>
                <value>
                    <fullName>Travel Trailer</fullName>
                </value>
                <value>
                    <fullName>Furniture Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Winterization_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Winterization Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wood_Floors__c</fullName>
        <label>Wood Floors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Char_ID_BrokerFee__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID_BrokerFee</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Char_ID_Deposit__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID_Deposit</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Char_ID_Fee__c</fullName>
        <inlineHelpText>Used to get the contact id for the pay_fees_to__c field.</inlineHelpText>
        <label>X18_Char_ID_Fee</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Char_ID_LL__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID_LL</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Char_ID_Rent__c</fullName>
        <description>Created to convert the 15 character id to 18 characters.</description>
        <label>X18_Char_ID_Rent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Properties</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Landlord__c</columns>
        <columns>NAME</columns>
        <columns>Type_of_Property__c</columns>
        <columns>Rent__c</columns>
        <columns>City__c</columns>
        <columns>State_ID__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Address_Line_1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Property</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <recordTypes>
        <fullName>Furniture_Only</fullName>
        <active>true</active>
        <description>Properties information for furniture only placements.</description>
        <label>Furniture Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Furniture_Only_Completed</fullName>
        <active>true</active>
        <label>Furniture Only - Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing</fullName>
        <active>true</active>
        <label>Housing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Housing_Completed</fullName>
        <active>true</active>
        <label>Housing - Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trailer_Mobile_Home</fullName>
        <active>true</active>
        <label>Trailer-Mobile Home</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trailer_Mobile_Home_Completed</fullName>
        <active>true</active>
        <label>Trailer-Mobile Home - Completed</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Lease_Date_Validation</fullName>
        <active>true</active>
        <description>Ensure the LeaseEndDate is greater then the LeaseStartDate</description>
        <errorConditionFormula>Lease_End__c &lt;  Lease_Start__c</errorConditionFormula>
        <errorMessage>The Lease End Date must be greater than the Lease Start Date</errorMessage>
    </validationRules>
</CustomObject>